# hjkoi-web

./: .gitignore  Cargo.toml  Dioxus.toml  package-lock.json  tailwind.config.js
public/: tailwind.css
src/: main.rs
src/components/: mod.rs  not_found.rs
src/components/article/: create.rs  detail.rs  index.rs  list.rs  mod.rs
src/components/media/: index.rs  mod.rs
