[package]
name = "hjkoi-web"
version = "0.1.0"
authors = ["Illusion <1161524405@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }
tracing = "0.1.40"
dioxus-logger = "0.5.0"
