[package]
name = "hjkoi-web"
version = "0.1.0"
authors = ["Illusion <1161524405@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }
tracing = "0.1.40"
dioxus-logger = "0.5.0"
pulldown-cmark = "0.11.0"
dioxus-heroicons = "0.2.0"
reqwest = { version = "0.12.5", features = ["json"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
# manganis = { git = "https://github.com/DioxusLabs/collect-assets" }